encapsulacion en  modulos

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -26,7 +26,7 @@
     <!-- footer -->
     <!-- ============================================================== -->
     <footer class="footer">
-      © 20xx Admin Pro by wrappixel.com
+      © {{year}} Admin Pro
     </footer>
     <!-- ============================================================== -->
     <!-- End footer -->
