--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,14 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-doughnut title="Sales" [labels]="labels1" [data]="data1"></app-doughnut>
+  </div>
+  <div class="col-6">
+    <app-doughnut title="Buys" [labels]="labels2" [data]="data2"></app-doughnut>
+  </div>
+  <div class="col-6">
+    <app-doughnut title="Changes" [labels]="labels3" [data]="data3"></app-doughnut>
+  </div>
+  <div class="col-6">
+    <app-doughnut title="TimeSpend" [labels]="labels4" [data]="data4"></app-doughnut>
+  </div>
+</div>
