--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,21 @@
   -webkit-animation-fill-mode:both
   ;animation-fill-mode:both
 }
+
+#themecolors .selector {
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+#themecolors .selector:hover{
+  -webkit-box-shadow:0 1px 5px 0 #000;
+  -moz-box-shadow:0 1px 5px 0 #000;
+  box-shadow:0 1px 5px 0 #000;
+}
+
+#themecolors:hover .selector:not(:hover){
+  opacity:.35;
+  -webkit-box-shadow:0 1px 1px 0 #000;
+  -moz-box-shadow:0 1px 1px 0 #000;
+  box-shadow:0 1px 1px 0 #000;
+}
