--- a/src/styles.css
+++ b/src/styles.css
@@ -6,15 +6,15 @@
   ;animation-fill-mode:both
 }
 
-#themecolors .selector {
+#themecolors .selector, .cursor {
   cursor: pointer;
-  transition: 0.4s;
 }
 
 #themecolors .selector:hover{
   -webkit-box-shadow:0 1px 5px 0 #000;
   -moz-box-shadow:0 1px 5px 0 #000;
   box-shadow:0 1px 5px 0 #000;
+  transition: 0.4s;
 }
 
 #themecolors:hover .selector:not(:hover){
@@ -22,4 +22,12 @@
   -webkit-box-shadow:0 1px 1px 0 #000;
   -moz-box-shadow:0 1px 1px 0 #000;
   box-shadow:0 1px 1px 0 #000;
+  transition: 0.4s;
+}
+
+#google-btn{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
